--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-layers.min.js"></script>
 		<script src="js/init.js"></script>
-		<noscript>
-			<link rel="stylesheet" href="css/skel.css" />
-			<link rel="stylesheet" href="css/style.css" />
-		</noscript>
+
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+    <link href="css/style.css" rel="stylesheet" type="text/css">
 	</head>
 	<body class="homepage">
 
@@ -32,15 +30,15 @@
 					<div class="container">
 							
 						<!-- Logo -->
-							<h1><a href="#" id="logo">Solarize</a></h1>
+							<h1><a href="#" id="logo">tOSU CLEANING</a></h1>
 						
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
 									<li class="active"><a href="index.html">Home</a></li>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="left-sidebar.html">Services</a></li>
+									<li><a href="right-sidebar.html">About Me</a></li>
+									<li><a href="no-sidebar.html">Pay</a></li>
 								</ul>
 							</nav>
 	
@@ -161,31 +159,14 @@
 			<div class="wrapper style5">
 				<section id="team" class="container">
 					<header class="major">
-						<h2>Cras vitae metus aliNuam</h2>
-						<span class="byline">pulvinar mollis. Vestibulum sem magna, elementum vestibulum arcu</span>
+						<h2>If You Can't Trust This Man</h2>
+						<span class="byline">Then You Can't Trust Anyone</span>
 					</header>
-					<div class="row">
-						<div class="3u">
-							<a href="#" class="image"><img src="images/placeholder.png" alt=""></a>
-							<h3>Molly Millions</h3>
-							<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
+						<div class="u3" id="JustinIntro">
+							<a href="#" class="image"><img src="images/ugly.jpg" alt="" width="235" height="230"></a>
+							<h3>Justin Cafiero</h3>
+							<p>The ugliest man around.</p>
 						</div>
-						<div class="3u">
-							<a href="#" class="image"><img src="images/placeholder.png" alt=""></a>
-							<h3>Henry Dorsett Case</h3>
-							<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
-						</div>
-						<div class="3u">
-							<a href="#" class="image"><img src="images/placeholder.png" alt=""></a>
-							<h3>Willis Corto</h3>
-							<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
-						</div>
-						<div class="3u">
-							<a href="#" class="image"><img src="images/placeholder.png" alt=""></a>
-							<h3>Linda Lee</h3>
-							<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
-						</div>
-					</div>
 				</section>
 			</div>
 
@@ -199,17 +180,11 @@
 				<ul class="icons">
 					<li class="active"><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
 					<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
-					<li><a href="#" class="fa fa-dribbble"><span>Pinterest</span></a></li>
+					<li><a href="http://www.google.com" class="fa fa-dribbble"><span>Pinterest</span></a></li>
 					<li><a href="http://www.google.com/jtcruthers" class="fa fa-google-plus"><span>Google+</span></a></li>
 				</ul>
 				<hr />
-			</section>
-			
-			<!-- Copyright -->
-				<div id="copyright">
-					Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)
-				</div>			
+			</section>		
 		</div>
-
 	</body>
 </html>
