--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						<div class="6u">
 							<h3>Suspendisse dictum porta</h3>
 							<p>Donec leo. Vivamus fermentum nibh in augue. Praesent a lacus at urna congue rutrum. Nulla enim eros, porttitor eu, tempus id, varius non, nibh. Vestibulum imperdiet, magna nec eleifend semper augue mattis wisi maecenas ligula nunc lectus vestibulum euismod lacinia quam nisl.</p>
-							<a href="#" class="button">Nulla aluctus eleifend</a>
+							<a href="#" class="button alt">Nulla aluctus eleifend</a>
 						</div>
 					</div>
 				</section>
@@ -135,7 +135,7 @@
 						<div class="4u">
 							<ul class="special-icons">
 								<li>
-									<span class="fa fa-cogs"></span>
+									<span class="fa-cogs fa"></span>
 									<h3>Nulla luctus eleifend</h3>
 									<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula pellentesque.</p>
 								</li>
