--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dorm Cleaning Services</title>
+		<title>Company Name</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -30,15 +30,15 @@
 					<div class="container">
 							
 						<!-- Logo -->
-							<h1><a href="#" id="logo">tOSU CLEANING</a></h1>
+							<h1><a href="#" id="logo">EDU CLEAN</a></h1>
 						
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li class="active"><a href="index.html">Home</a></li>
-									<li><a href="left-sidebar.html">Services</a></li>
-									<li><a href="right-sidebar.html">About Me</a></li>
-									<li><a href="no-sidebar.html">Pay</a></li>
+									<li class="active"><a href="home.html">Home</a></li>
+									<li><a href="services.html">Services</a></li>
+									<li><a href="aboutMe.html">About Me</a></li>
+									<li><a href="pay.html">Pay</a></li>
 								</ul>
 							</nav>
 	
@@ -48,7 +48,7 @@
 			<!-- Banner -->
 				<div id="banner">
 					<section class="container">
-					  <h2>Justin's Dorm cleaning service</h2>
+					  <h2>Justin's Dorm cleaning</h2>
 					  <p> <br><br>
                       The best dorm cleaning service in the great state of Ohio</p>
 					</section>
