--- a/aboutMe.html
+++ b/aboutMe.html
@@ -26,14 +26,14 @@
 
 		<!-- Header Wrapper -->
 			<div class="wrapper style1">
-			
+
 				<!-- Header -->
 					<div id="header">
 						<div class="container">
-								
+
 							<!-- Logo -->
 								<h1><a href="#" id="logo">Logo</a></h1>
-							
+
 							<!-- Nav -->
 								<nav id="nav">
 									<ul>
@@ -46,7 +46,7 @@
 						</div>
 					</div>
 			</div>
-		
+
 		<!-- Main -->
 			<div id="main" class="wrapper style4">
 				<div class="container">
@@ -57,7 +57,7 @@
 							<section>
 								<header class="major">
 									<h2>Etiam malesuada</h2>
-								</header>									
+								</header>
 								<ul class="default">
 									<li><a href="#">Pellentesque lectus gravida blandit</a></li>
 									<li><a href="#">Lorem ipsum consectetuer adipiscing</a></li>
@@ -99,38 +99,21 @@
 					</div>
 				</div>
 			</div>
-		
+
 		<!-- Team -->
-			<div class="wrapper style5">
-				<section id="team" class="container">
-					<header class="major">
-						<h2>Cras vitae metus aliNuam</h2>
-						<span class="byline">pulvinar mollis. Vestibulum sem magna, elementum vestibulum arcu</span>
-					</header>
-					<div class="row">
-						<div class="3u">
-							<a href="#" class="image"><img src="images/placeholder.png" alt=""></a>
-							<h3>Molly Millions</h3>
-							<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
-						</div>
-						<div class="3u">
-							<a href="#" class="image"><img src="images/placeholder.png" alt=""></a>
-							<h3>Henry Dorsett Case</h3>
-							<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
-						</div>
-						<div class="3u">
-							<a href="#" class="image"><img src="images/placeholder.png" alt=""></a>
-							<h3>Willis Corto</h3>
-							<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
-						</div>
-						<div class="3u">
-							<a href="#" class="image"><img src="images/placeholder.png" alt=""></a>
-							<h3>Linda Lee</h3>
-							<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
-						</div>
+		<div class="wrapper style5">
+			<section id="team" class="container">
+				<header class="major">
+					<h2>If You Can't Trust This Man</h2>
+					<span class="byline">Then You Can't Trust Anyone</span>
+				</header>
+					<div class="u3" id="JustinIntro">
+						<a href="#" class="image"><img src="images/ugly.jpg" alt="" width="235" height="230"></a>
+						<h3>Justin Cafiero</h3>
+						<p>The ugliest man around.</p>
 					</div>
-				</section>
-			</div>
+			</section>
+		</div>
 
 	<!-- Footer -->
 		<div id="footer">
@@ -147,11 +130,11 @@
 				</ul>
 				<hr />
 			</section>
-			
+
 			<!-- Copyright -->
 				<div id="copyright">
 					Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)
-				</div>			
+				</div>
 		</div>
 
 	</body>
