--- a/home.html
+++ b/home.html
@@ -19,6 +19,10 @@
 
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
     <link href="css/style.css" rel="stylesheet" type="text/css">
+    <style type="text/css">
+    .mugshot {
+}
+    </style>
 	</head>
 	<body class="homepage">
 
@@ -48,9 +52,8 @@
 			<!-- Banner -->
 				<div id="banner">
 					<section class="container">
-					  <h2>The QuadSquad</h2>
-					  <p> <br><br>
-                      The best dorm cleaning service in the great state of Ohio</p>
+                                        <h2>The QuadSquad</h2>
+                                        <p><br>The best dorm cleaning service in the great state of Ohio</p>
 					</section>
 				</div>
 
@@ -163,7 +166,7 @@
 						<span class="byline">Then You Can't Trust Anyone</span>
 					</header>
 						<div class="u3" id="JustinIntro">
-							<a href="#" class="image"><img src="images/ugly.jpg" alt="" width="235" height="230"></a>
+							<a href="#" class="image"><img src="images/ugly.jpg" alt="" width="235" height="230" class="mugshot"></a>
 							<h3>Justin Cafiero</h3>
 							<p>The ugliest man around.</p>
 						</div>
