--- a/pay.html
+++ b/pay.html
@@ -37,7 +37,7 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li class="active"><a href="home.html">Home</a></li>
+									<li class="active"><a href="index.html">Home</a></li>
 									<li><a href="services.html">Services</a></li>
 									<li><a href="aboutMe.html">About me</a></li>
 									<li><a href="pay.html">Pay</a></li>
