--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<head>
 		<title>The QuadSquad</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="Great dorm cleaning for the people." />
+		<meta name="keywords" content="Cleaning" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.dropotron.min.js"></script>
@@ -18,11 +18,7 @@
 		<script src="js/init.js"></script>
 
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
-    <link href="css/style.css" rel="stylesheet" type="text/css">
-    <style type="text/css">
-    .mugshot {
-}
-    </style>
+    	<link href="css/style.css" rel="stylesheet" type="text/css">
 	</head>
 	<body class="homepage">
 
@@ -34,7 +30,7 @@
 					<div class="container">
 
 						<!-- Logo -->
-							<h1><a href="#" id="logo">EDU CLEAN</a></h1>
+							<h1><a href="index.html" id="logo">Quad Squad</a></h1>
 
 						<!-- Nav -->
 							<nav id="nav">
@@ -52,8 +48,8 @@
 			<!-- Banner -->
 				<div id="banner">
 					<section class="container">
-                                        <h2>The QuadSquad</h2>
-                                        <p><br>The best dorm cleaning service in the great state of Ohio</p>
+                        <h2>The QuadSquad</h2>
+                        <p><br>The best dorm cleaning service in the great state of Ohio</p>
 					</section>
 				</div>
 
