--- a/aboutMe.html
+++ b/aboutMe.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Solarize by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
 <html>
 	<head>
-		<title>Company Name - About Me</title>
+		<title>My QuadSquad Story</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -32,14 +27,14 @@
 						<div class="container">
 
 							<!-- Logo -->
-								<h1><a href="#" id="logo">Logo</a></h1>
+								<h1><a href="#" id="logo">Quadsquad</a></h1>
 
 							<!-- Nav -->
 								<nav id="nav">
 									<ul>
 										<li class="active"><a href="index.html">Home</a></li>
 										<li><a href="services.html">Services</a></li>
-										<li><a href="aboutMe.html">About Me</a></li>
+										<li><a href="aboutMe.html">My Story</a></li>
 										<li><a href="pay.html">Pay</a></li>
 									</ul>
 								</nav>
@@ -89,53 +84,45 @@
 							<section>
 								<header class="major">
 									<h2>My story</h2>
-									<span class="byline">I promise it's real</span>
 								</header>
-								<p>Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus ac magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna, elementum ut, vestibulum eu, facilisis quis, arcu. Mauris a dolor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed blandit. Phasellus pellentesque, ante nec iaculis lobortis lorem mauris quis nunc.</p>
-								<p>Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus ac magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna, elementum ut, vestibulum eu, facilisis quis, arcu. Mauris a dolor. Nulla facilisi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-								<p>Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus ac magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna, elementum ut, vestibulum eu, facilisis quis, arcu. Mauris a dolor. Nulla facilisi. Cum sociis natoque penatibus. Sed blandit. Phasellus pellentesque.</p>
-							</section>
+								<p>Hi everyone, I&rsquo;m Justin, 3rd year finance major at OSU&nbsp;and founder of The QuadSquad. Before I make your lives simple and rooms spotless, I thought I&rsquo;d introduce myself. I&rsquo;m a Jets, Yankees, and Knicks fan, but above all, the proudest Buckeye in the land. I was born and raised in Westfield, NJ where I learned the importance of hard work and dedication. As an honest, responsible guy, I&rsquo;m on a mission to make my fellow Buckeyes&rsquo; lives easier and rooms cleaner. </p>
+                                <p>My freshman year at Smith Steeb was where I noticed a demand for a dorm room cleaning service at OSU. Regular class schedules paired with social gatherings can make any room a disastrous mess. There aren&rsquo;t enough hours in the day for a typical Buckeye to keep a tidy room. Between homework, exams, clubs, and nights out, a dirty room is an unnecessary evil. <br>
+                                  So, please let me help you. For $30 a month ($15 per roommate), The QuadSquad will keep your room clean so you can keep your grades up. </p>
+                                <p>Below are some email addresses of important people in my life who can attest to my character and my company. Please feel free to send them a message with questions or concerns: </p>
+                                <p>Jessica Cobuzzi: <a href="mailto:jcobuzzi@fordham.edu">jcobuzzi@fordham.edu</a></p>
+                                <p>Mark Cafiero: <a href="mailto:markcafiero91@yahoo.com">markcafiero91@yahoo.com</a>    </p>
+                            </section>
 						</div>
 					</div>
 				</div>
 			</div>
 
-		<!-- Team -->
-		<div class="wrapper style5">
-			<section id="team" class="container">
-				<header class="major">
-					<h2>If You Can't Trust This Man</h2>
-					<span class="byline">Then You Can't Trust Anyone</span>
-				</header>
-					<div class="u3" id="JustinIntro">
-						<a href="#" class="image"><img src="images/ugly.jpg" alt="" width="235" height="230"></a>
-						<h3>Justin Cafiero</h3>
-						<p>The ugliest man around.</p>
-					</div>
-			</section>
-		</div>
-
-	<!-- Footer -->
-		<div id="footer">
-			<section class="container">
-				<header class="major">
-					<h2>Connect with us</h2>
-					<span class="byline">Integer sit amet pede vel arcu aliquet pretium</span>
-				</header>
-				<ul class="icons">
-					<li class="active"><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
-					<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
-					<li><a href="#" class="fa fa-dribbble"><span>Pinterest</span></a></li>
-					<li><a href="#" class="fa fa-google-plus"><span>Google+</span></a></li>
-				</ul>
-				<hr />
-			</section>
-
-			<!-- Copyright -->
-				<div id="copyright">
-					Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)
+			<!-- Team -->
+				<div class="wrapper style5">
+					<section id="team" class="container">
+						<header class="major">
+							<h2>The Squad</h2>
+						</header>
+							<div class="u3" id="JustinIntro">
+								<a href="#" class="image"><img src="images/ugly.jpg" alt="" width="235" height="230" class="mugshot"></a>
+								<h3>Justin Cafiero</h3>
+								<p>Founder of QuadSquad</p>
+							</div>
+					</section>
 				</div>
-		</div>
 
-	</body>
-</html>
+		<!-- Footer -->
+			<div id="footer">
+				<section class="container">
+					<header class="major">
+						<h2>Connect with us</h2>
+					</header>
+					<ul class="icons">
+						<li class="active"><a href="https://www.facebook.com/QuadSquadOSU" class="fa fa-facebook"><span>Facebook</span></a></li>
+						<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
+					</ul>
+					<hr />
+				</section>
+			</div>
+		</body>
+	</html>
