--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Solarize by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
 <html>
 	<head>
 		<title>The QuadSquad</title>
@@ -37,7 +32,7 @@
 								<ul>
 									<li class="active"><a href="index.html">Home</a></li>
 									<li><a href="services.html">Services</a></li>
-									<li><a href="aboutMe.html">About Me</a></li>
+									<li><a href="aboutMe.html">My Story</a></li>
 									<li><a href="pay.html">Pay</a></li>
 								</ul>
 							</nav>
@@ -61,8 +56,8 @@
 					<div class="row double">
 						<div class="6u">
 							<header class="major">
-								<h2>Pellentesque viverra vulputate enim. Aliquam volutpat. Pellentesque tristique Risus</h2>
-								<span class="byline">In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Donec pulvinar ullamcorper metus.</span>
+								<h2>Get your room cleaned. Regularly, or as you need.</h2>
+								<span class="byline">Donec leo. Vivamus fermentum nibh in augue. Praesent a lacus at urna congue rutrum. Nulla enim eros, porttitor eu</span>
 							</header>
 						</div>
 						<div class="6u">
@@ -78,10 +73,10 @@
 			<div class="wrapper style3">
 				<section class="container">
 					<header class="major">
-						<h2>Cras vitae metus aliNuam</h2>
+						<h2>The QuadSquad Mission</h2>
 					</header>
-					<p>Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna, elementum vestibulum arcu.</p>
-					<a href="#" class="button alt">Nulla aluctus eleifend</a>
+					<p>QuadSquad offers high quality, low cost dorm-room cleaning to students at Ohio State. Our goal is to enhance the college experience and to improve the overall cleanliness of the college community.</p>
+					<a href="aboutMe.html" class="button alt">Learn The Story</a>
 				</section>
 			</div>
 
@@ -158,13 +153,12 @@
 			<div class="wrapper style5">
 				<section id="team" class="container">
 					<header class="major">
-						<h2>If You Can't Trust This Man</h2>
-						<span class="byline">Then You Can't Trust Anyone</span>
+						<h2>The Squad</h2>
 					</header>
 						<div class="u3" id="JustinIntro">
 							<a href="#" class="image"><img src="images/ugly.jpg" alt="" width="235" height="230" class="mugshot"></a>
 							<h3>Justin Cafiero</h3>
-							<p>The ugliest man around.</p>
+							<p>Founder of QuadSquad</p>
 						</div>
 				</section>
 			</div>
@@ -174,11 +168,10 @@
 			<section class="container">
 				<header class="major">
 					<h2>Connect with us</h2>
-					<span class="byline">We wont let you down</span>
 				</header>
 				<ul class="icons">
-					<li class="active"><a href="https://www.facebook.com/justincafiero0530" class="fa fa-facebook"><span>Facebook</span></a></li>
-					<li><a href="https://twitter.com/justincafiero2" class="fa fa-twitter"><span>Twitter</span></a></li>
+					<li class="active"><a href="https://www.facebook.com/QuadSquadOSU" class="fa fa-facebook"><span>Facebook</span></a></li>
+					<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
 				</ul>
 				<hr />
 			</section>
