--- a/pay.html
+++ b/pay.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Solarize by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
 <html>
 	<head>
-		<title>Company Name - Pay</title>
+		<title>QuadSquad Pay</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -34,15 +29,15 @@
 						<!-- Logo -->
 							<h1><a href="#" id="logo">Logo</a></h1>
 
-						<!-- Nav -->
-							<nav id="nav">
-								<ul>
-									<li class="active"><a href="index.html">Home</a></li>
-									<li><a href="services.html">Services</a></li>
-									<li><a href="aboutMe.html">About me</a></li>
-									<li><a href="pay.html">Pay</a></li>
-								</ul>
-							</nav>
+							<!-- Nav -->
+								<nav id="nav">
+									<ul>
+										<li class="active"><a href="index.html">Home</a></li>
+										<li><a href="services.html">Services</a></li>
+										<li><a href="aboutMe.html">My Story</a></li>
+										<li><a href="pay.html">Pay</a></li>
+									</ul>
+								</nav>
 
 					</div>
 				</div>
@@ -58,62 +53,48 @@
 							<h2>Payment is easy</h2>
 							<span class="byline">And affordable on any college budget</span>
 						</header>
-						<p>Maecenas pede nisl, elementum eu, ornare ac, malesuada at, erat. Proin gravida orci porttitor enim accumsan lacinia. Donec condimentum, urna non molestie semper, ligula enim ornare nibh, quis laoreet eros quam eget ante. Aliquam libero. Vivamus nisl nibh, iaculis vitae, viverra sit amet, ullamcorper vitae, turpis. Aliquam erat volutpat. Vestibulum dui sem, pulvinar sed, imperdiet nec, iaculis nec, leo. Fusce odio. Etiam arcu dui, faucibus eget, placerat vel, sodales eget, orci. Donec ornare neque ac sem. Mauris aliquet. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Donec nonummy magna quis risus. Quisque eleifend. Phasellus tempor vehicula justo. Aliquam lacinia metus ut elit. Donec nonummy magna quis risus. Quisque eleifend. Maecenas pede nisl, elementum eu, ornare ac, malesuada at, erat. Proin gravida orci porttitor enim accumsan lacinia. Donec condimentum, urna non molestie semper, ligula enim ornare nibh, quis laoreet eros quam eget ante. Aliquam libero. Donec ornare neque ac sem. Mauris aliquet. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Donec nonummy magna quis risus. Quisque eleifend. Phasellus tempor vehicula justo. Aliquam lacinia metus ut elit.</p>
-						<p>Vivamus nisl nibh, iaculis vitae, viverra sit amet, ullamcorper vitae, turpis. Aliquam erat volutpat. Vestibulum dui sem, pulvinar sed, imperdiet nec, iaculis nec, leo. Fusce odio. Etiam arcu dui, faucibus eget, placerat vel, sodales eget, orci. Donec ornare neque ac sem. Mauris aliquet. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Phasellus tempor vehicula justo. Aliquam lacinia metus ut elit. Maecenas pede nisl, elementum eu, ornare ac, malesuada at, erat. Proin gravida orci porttitor enim accumsan lacinia. Donec condimentum, urna non molestie semper, ligula enim ornare nibh, quis laoreet eros quam eget ante. Aliquam libero. Vivamus nisl nibh, iaculis vitae, viverra sit amet, ullamcorper vitae, turpis. Donec ornare neque ac sem. Mauris aliquet. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Donec nonummy magna quis risus. Quisque eleifend. Phasellus tempor vehicula justo. Aliquam lacinia metus ut elit. Aliquam erat volutpat. Vestibulum dui sem, pulvinar sed, imperdiet nec, iaculis nec, leo. Fusce odio. Etiam arcu dui, faucibus eget, placerat vel, sodales eget, orci. Donec ornare neque ac sem. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Donec nonummy magna quis risus.</p>
-						<p>Vivamus nisl nibh, iaculis vitae, viverra sit amet, ullamcorper vitae, turpis. Aliquam erat volutpat. Vestibulum dui sem, pulvinar sed, imperdiet nec, iaculis nec, leo. Fusce odio. Etiam arcu dui, faucibus eget, placerat vel, sodales eget, orci. Donec ornare neque ac sem. Mauris aliquet. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Phasellus tempor vehicula justo. Aliquam lacinia metus ut elit. Maecenas pede nisl, elementum eu, ornare ac, malesuada at, erat. Proin gravida orci porttitor enim accumsan lacinia. Donec condimentum, urna non molestie semper, ligula enim ornare nibh, quis laoreet eros quam eget ante. Aliquam libero. Vivamus nisl nibh, iaculis vitae, viverra sit amet, ullamcorper vitae, turpis. Donec ornare neque ac sem. Mauris aliquet. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Donec nonummy magna quis risus. Quisque eleifend. Phasellus tempor vehicula justo. Aliquam lacinia metus ut elit. Aliquam erat volutpat. Vestibulum dui sem, pulvinar sed, imperdiet nec, iaculis nec, leo. Fusce odio. Etiam arcu dui, faucibus eget, placerat vel, sodales eget, orci. Mauris aliquet. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Donec nonummy magna quis risus.</p>
-        
-                                                
-                                               <script async="async" src="https://www.paypalobjects.com/js/external/paypal-button.min.js?merchant=Jtcruthers@gmail.com" 
-                                                    data-button="buynow" 
-                                                    data-name="QuadSquad" 
-                                                    data-quantity="1" 
-                                                    data-amount="30.00" 
-                                                    data-currency="USD" 
-                                                    data-shipping="0.00" 
-                                                    data-tax="2.00" 
+                        <p> For just a few dollars you can get it all </p>
+
+                                               <script async="async" src="https://www.paypalobjects.com/js/external/paypal-button.min.js?merchant=Jtcruthers@gmail.com"
+                                                    data-button="buynow"
+                                                    data-name="QuadSquad"
+                                                    data-quantity="1"
+                                                    data-amount="30.00"
+                                                    data-currency="USD"
+                                                    data-shipping="0.00"
+                                                    data-tax="2.00"
                                                     data-callback="http://QuadSquad.paperplane.io"
                                                ></script>
                                                 </section>
 				</div>
 			</div>
 
-		<!-- Team -->
-			<div class="wrapper style5">
+			<!-- Team -->
 				<div class="wrapper style5">
 					<section id="team" class="container">
 						<header class="major">
-							<h2>If You Can't Trust This Man</h2>
-							<span class="byline">Then You Can't Trust Anyone</span>
+							<h2>The Squad</h2>
 						</header>
 							<div class="u3" id="JustinIntro">
-								<a href="#" class="image"><img src="images/ugly.jpg" alt="" width="235" height="230"></a>
+								<a href="#" class="image"><img src="images/ugly.jpg" alt="" width="235" height="230" class="mugshot"></a>
 								<h3>Justin Cafiero</h3>
-								<p>The ugliest man around.</p>
+								<p>Founder of QuadSquad</p>
 							</div>
 					</section>
 				</div>
 
-	<!-- Footer -->
-		<div id="footer">
-			<section class="container">
-				<header class="major">
-					<h2>Connect with us</h2>
-					<span class="byline">Integer sit amet pede vel arcu aliquet pretium</span>
-				</header>
-				<ul class="icons">
-					<li class="active"><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
-					<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
-					<li><a href="#" class="fa fa-dribbble"><span>Pinterest</span></a></li>
-					<li><a href="#" class="fa fa-google-plus"><span>Google+</span></a></li>
-				</ul>
-				<hr />
-			</section>
-
-			<!-- Copyright -->
-				<div id="copyright">
-					Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)
-				</div>
-		</div>
-
-	</body>
-</html>
+		<!-- Footer -->
+			<div id="footer">
+				<section class="container">
+					<header class="major">
+						<h2>Connect with us</h2>
+					</header>
+					<ul class="icons">
+						<li class="active"><a href="https://www.facebook.com/QuadSquadOSU" class="fa fa-facebook"><span>Facebook</span></a></li>
+						<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
+					</ul>
+					<hr />
+				</section>
+			</div>
+		</body>
+	</html>
