--- a/services.html
+++ b/services.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Solarize by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
 <html>
 	<head>
-		<title>Company Name - Services</title>
+		<title>QuadSquad Services</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -32,17 +27,17 @@
 					<div class="container">
 
 						<!-- Logo -->
-							<h1><a href="#" id="logo">Logo</a></h1>
+							<h1><a href="#" id="logo">Quadsquad</a></h1>
 
-						<!-- Nav -->
-							<nav id="nav">
-								<ul>
-									<li class="active"><a href="index.html">Home</a></li>
-									<li><a href="services.html">Services</a></li>
-									<li><a href="aboutMe.html">About Me</a></li>
-									<li><a href="pay.html">Pay</a></li>
-								</ul>
-							</nav>
+							<!-- Nav -->
+								<nav id="nav">
+									<ul>
+										<li class="active"><a href="index.html">Home</a></li>
+										<li><a href="services.html">Services</a></li>
+										<li><a href="aboutMe.html">My Story</a></li>
+										<li><a href="pay.html">Pay</a></li>
+									</ul>
+								</nav>
 
 					</div>
 				</div>
@@ -58,11 +53,26 @@
 							<section>
 								<header class="major">
 									<h2>Services</h2>
-									<span class="byline">Are all inclusive</span>
+									<!-- <span class="byline">Take your pick</span>  -->
 								</header>
-								<p>Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus ac magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna, elementum ut, vestibulum eu, facilisis quis, arcu. Mauris a dolor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed blandit. Phasellus pellentesque, ante nec iaculis lobortis lorem mauris quis nunc.</p>
-								<p>Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus ac magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna, elementum ut, vestibulum eu, facilisis quis, arcu. Mauris a dolor. Nulla facilisi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-								<p>Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus ac magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna, elementum ut, vestibulum eu, facilisis quis, arcu. Mauris a dolor. Nulla facilisi. Cum sociis natoque penatibus. Sed blandit. Phasellus pellentesque.</p>
+                                <p>The QuadSquad provides four packages of cleaning services.</p>
+
+<p> The first option is the Monthly-Single Clean Dorm option: a regularly scheduled cleaning appointment provided each month on the day of your choice for a total of $16.99 for one roommate.</p>
+                                <p>The second option is the Monthly-Double Clean Dorm option: a regularly scheduled cleaning appointment provided each month on the day of your choice for a total of $30 ($15 per roommate).</p>
+                                <p>The third option is the Monthly-Triple Clean Dorm option: a regularly scheduled cleaning appointment provided each month on the day of your choice for a total of $45 ($15 per roommate). </p>
+                                <p>The fourth option is the Emergency-Clean Dorm option: a same-day scheduled cleaning appointment provided on the day of scheduling for a total of $20 per roommate.</p>
+                                <p>All of the above Clean Dorm options provide these services: </p>
+    							<ul>
+                                    <li>Vacuum </li>
+                                    <li>Kitchenware cleaning </li>
+                                    <li>Desk Cleaning and Polish </li>
+                                    <li>Garbage removal and bag replacement </li>
+                                    <li>Clothes Organization </li>
+                                    <li>Temperature adjustment </li>
+                                    <li>Window cleaning </li>
+                                    <li>Wire Organization </li>
+                                    <li>Smell Control </li>
+                                </ul>
 							</section>
 						</div>
 
@@ -70,16 +80,10 @@
 						<div id="sidebar" class="4u">
 							<section>
 								<header class="major">
-									<h2>Etiam malesuada</h2>
+									<h2>Did You Know?</h2>
 								</header>
 								<ul class="default">
-									<li><a href="#">Pellentesque lectus gravida blandit</a></li>
-									<li><a href="#">Lorem ipsum consectetuer adipiscing</a></li>
-									<li><a href="#">Phasellus nibh pellentesque congue</a></li>
-									<li><a href="#">Cras vitae metus aliquam pharetra</a></li>
-									<li><a href="#">Maecenas vitae orci feugiat eleifend</a></li>
-									<li><a href="#">Phasellus nibh pellentesque congue</a></li>
-									<li><a href="#">Cras vitae metus aliquam pharetra</a></li>
+									<li><a href="#">Pellentesque lectus gravida blandit is one of the main reasons we have crime.</a></li>
 								</ul>
 							</section>
 							<section>
@@ -102,42 +106,32 @@
 				</div>
 			</div>
 
-		<!-- Team -->
-		<div class="wrapper style5">
-			<section id="team" class="container">
-				<header class="major">
-					<h2>If You Can't Trust This Man</h2>
-					<span class="byline">Then You Can't Trust Anyone</span>
-				</header>
-					<div class="u3" id="JustinIntro">
-						<a href="#" class="image"><img src="images/ugly.jpg" alt="" width="235" height="230"></a>
-						<h3>Justin Cafiero</h3>
-						<p>The ugliest man around.</p>
-					</div>
-			</section>
-		</div>
-
-	<!-- Footer -->
-		<div id="footer">
-			<section class="container">
-				<header class="major">
-					<h2>Connect with us</h2>
-					<span class="byline">Integer sit amet pede vel arcu aliquet pretium</span>
-				</header>
-				<ul class="icons">
-					<li class="active"><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
-					<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
-					<li><a href="#" class="fa fa-dribbble"><span>Pinterest</span></a></li>
-					<li><a href="#" class="fa fa-google-plus"><span>Google+</span></a></li>
-				</ul>
-				<hr />
-			</section>
-
-			<!-- Copyright -->
-				<div id="copyright">
-					Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)
+			<!-- Team -->
+				<div class="wrapper style5">
+					<section id="team" class="container">
+						<header class="major">
+							<h2>The Squad</h2>
+						</header>
+							<div class="u3" id="JustinIntro">
+								<a href="#" class="image"><img src="images/ugly.jpg" alt="" width="235" height="230" class="mugshot"></a>
+								<h3>Justin Cafiero</h3>
+								<p>Founder of QuadSquad</p>
+							</div>
+					</section>
 				</div>
-		</div>
 
-	</body>
-</html>
+		<!-- Footer -->
+			<div id="footer">
+				<section class="container">
+					<header class="major">
+						<h2>Connect with us</h2>
+					</header>
+					<ul class="icons">
+						<li class="active"><a href="https://www.facebook.com/QuadSquadOSU" class="fa fa-facebook"><span>Facebook</span></a></li>
+						<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
+					</ul>
+					<hr />
+				</section>
+			</div>
+		</body>
+	</html>
