--- a/faq.html
+++ b/faq.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>QuadSquad Services</title>
+		<title>QuadSquad FAQ</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -27,7 +27,7 @@
 					<div class="container">
 
 						<!-- Logo -->
-							<h1><a href="#" id="logo">Quadsquad</a></h1>
+							<h1><a href="#" id="logo">QuadSquad</a></h1>
 
 							<!-- Nav -->
 							<nav id="nav">
@@ -47,38 +47,21 @@
 
 		<!-- Main -->
 			<div id="main" class="wrapper style4">
-				<div class="container">
-					<div class="row">
 
-						<!-- Content -->
-						<div id="content" class="8u skel-cell-important">
-							<section>
-								<header class="major">
-									<h2>Services</h2>
-									<!-- <span class="byline">Take your pick</span>  -->
-								</header>
-                                <p>The QuadSquad provides four packages of cleaning services.</p>
+				<!-- Content -->
+				<div id="content" class="container">
+					<section>
 
-<p> The first option is the Monthly-Single Clean Dorm option: a regularly scheduled cleaning appointment provided each month on the day of your choice for a total of $16.99 for one roommate.</p>
-                                <p>The second option is the Monthly-Double Clean Dorm option: a regularly scheduled cleaning appointment provided each month on the day of your choice for a total of $30 ($15 per roommate).</p>
-                                <p>The third option is the Monthly-Triple Clean Dorm option: a regularly scheduled cleaning appointment provided each month on the day of your choice for a total of $45 ($15 per roommate). </p>
-                                <p>The fourth option is the Emergency-Clean Dorm option: a same-day scheduled cleaning appointment provided on the day of scheduling for a total of $20 per roommate.</p>
-                                <p>All of the above Clean Dorm options provide these services: </p>
-    							<ul>
-                                    <li>Vacuuming </li>
-                                    <li>Kitchenware cleaning </li>
-                                    <li>Desk Cleaning and Polishing </li>
-                                    <li>Garbage removal and bag replacement </li>
-                                    <li>Clothes Organization </li>
-                                    <li>Temperature adjustment </li>
-                                    <li>Window cleaning </li>
-                                    <li>Wire Organization </li>
-                                    <li>Smell Control </li>
-                                </ul>
-							</section>
-						</div>
+						<header class="major">
+							<center>
+							<h2>Frequently Asked Questions</h2><br>
+							<h4>We understand if you have a couple</h4>
+							<h4>Let us clear them up for you</h4>
+							</center>
+						</header>
 
-					</div>
+
+                    </section>
 				</div>
 			</div>
 
@@ -100,7 +83,7 @@
 			<div id="footer">
 				<section class="container">
 					<header class="major">
-						<h2>Connect with us</h2>
+						<h2><a href="contact.html">Clean easy</a></h2>
 					</header>
 					<ul class="icons">
 						<li class="active"><a href="https://www.facebook.com/QuadSquadOSU" class="fa fa-facebook"><span>Facebook</span></a></li>
