--- a/index3.html
+++ b/index3.html
@@ -34,7 +34,7 @@
 								<li><a href="services.html">Services</a></li>
 								<li><a href="mystory.html">My Story</a></li>
 								<li><a href="faq.html">FAQ</a></li>
-								<li><a href="contact.html">Contact</a></li>
+								<li><a href="https://locknesssoftware.wufoo.com/forms/quadsquad-contact-form/">Contact</a></li>
 								<li><a href="pay.html">Pay</a></li>
 							</ul>
 						</nav>
@@ -68,7 +68,7 @@
 								<h3>We Know You're On A Budget</h3>
 								<span class="byline">With our low cost cleaning solutions, you can spend less time straigtening up and more time turning up</span>
 							</header>
-							<a href="services.html" class="button alt">How Much, you ask?</a>
+							<a href="#" class="button alt">Nulla aluctus eleifend</a>
 						</div>
 					</div>
 				</section>
