--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>QuadSquad Pay</title>
+		<title>QuadSquad Contact</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -30,16 +30,16 @@
 							<h1><a href="#" id="logo">QuadSquad</a></h1>
 
 							<!-- Nav -->
-							<nav id="nav">
-								<ul>
-									<li class="active"><a href="index.html">Home</a></li>
-									<li><a href="services.html">Services</a></li>
-									<li><a href="mystory.html">My Story</a></li>
-									<li><a href="faq.html">FAQ</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li><a href="pay.html">Pay</a></li>
-								</ul>
-							</nav>
+								<nav id="nav">
+									<ul>
+										<li class="active"><a href="index.html">Home</a></li>
+										<li><a href="services.html">Services</a></li>
+										<li><a href="mystory.html">My Story</a></li>
+										<li><a href="faq.html">FAQ</a></li>
+										<li><a href="contact.html">Contact</a></li>
+										<li><a href="pay.html">Pay</a></li>
+									</ul>
+								</nav>
 
 					</div>
 				</div>
@@ -52,21 +52,12 @@
 				<div id="content" class="container">
 					<section>
 						<header class="major">
-							<h2>Payment is easy</h2>
-							<span class="byline">And affordable on any college budget</span>
+							<center><h2>Contact Us</h2>
+							<span class="byline">You know we will get back to you</span></center>
 						</header>
-                        <p> For just a few dollars you can get it all </p>
+                        <p> </p>
 
-                                               <script async="async" src="https://www.paypalobjects.com/js/external/paypal-button.min.js?merchant=Jtcruthers@gmail.com"
-                                                    data-button="buynow"
-                                                    data-name="QuadSquad"
-                                                    data-quantity="1"
-                                                    data-amount="30.00"
-                                                    data-currency="USD"
-                                                    data-shipping="0.00"
-                                                    data-tax="2.00"
-                                                    data-callback="http://QuadSquad.paperplane.io"
-                                               ></script>
+
                                                 </section>
 				</div>
 			</div>
