--- a/mystory.html
+++ b/mystory.html
@@ -30,14 +30,16 @@
 								<h1><a href="#" id="logo">Quadsquad</a></h1>
 
 							<!-- Nav -->
-								<nav id="nav">
-									<ul>
-										<li class="active"><a href="index.html">Home</a></li>
-										<li><a href="services.html">Services</a></li>
-										<li><a href="aboutMe.html">My Story</a></li>
-										<li><a href="pay.html">Pay</a></li>
-									</ul>
-								</nav>
+							<nav id="nav">
+								<ul>
+									<li class="active"><a href="index.html">Home</a></li>
+									<li><a href="services.html">Services</a></li>
+									<li><a href="mystory.html">My Story</a></li>
+									<li><a href="faq.html">FAQ</a></li>
+									<li><a href="contact.html">Contact</a></li>
+									<li><a href="pay.html">Pay</a></li>
+								</ul>
+							</nav>
 						</div>
 					</div>
 			</div>
@@ -47,50 +49,21 @@
 				<div class="container">
 					<div class="row">
 
-						<!-- Sidebar -->
-						<div id="sidebar" class="4u">
-							<section>
-								<header class="major">
-									<h2>Etiam malesuada</h2>
-								</header>
-								<ul class="default">
-									<li><a href="#">Pellentesque lectus gravida blandit</a></li>
-									<li><a href="#">Lorem ipsum consectetuer adipiscing</a></li>
-									<li><a href="#">Phasellus nibh pellentesque congue</a></li>
-									<li><a href="#">Cras vitae metus aliquam pharetra</a></li>
-									<li><a href="#">Maecenas vitae orci feugiat eleifend</a></li>
-									<li><a href="#">Phasellus nibh pellentesque congue</a></li>
-									<li><a href="#">Cras vitae metus aliquam pharetra</a></li>
-								</ul>
-							</section>
-							<section>
-								<header class="major">
-									<h2>Mauris vulputate</h2>
-								</header>
-								<ul class="default">
-									<li><a href="#">Pellentesque lectus gravida blandit</a></li>
-									<li><a href="#">Lorem ipsum consectetuer adipiscing</a></li>
-									<li><a href="#">Phasellus nibh pellentesque congue</a></li>
-									<li><a href="#">Cras vitae metus aliquam pharetra</a></li>
-									<li><a href="#">Maecenas vitae orci feugiat eleifend</a></li>
-									<li><a href="#">Phasellus nibh pellentesque congue</a></li>
-									<li><a href="#">Cras vitae metus aliquam pharetra</a></li>
-								</ul>
-							</section>
-						</div>
 
 						<!-- Content -->
 						<div id="content" class="8u skel-cell-important">
 							<section>
+
 								<header class="major">
-									<h2>My story</h2>
+									<center><h2>My story</h2></center>
 								</header>
 								<p>Hi everyone, I&rsquo;m Justin, 3rd year finance major at OSU&nbsp;and founder of The QuadSquad. Before I make your lives simple and rooms spotless, I thought I&rsquo;d introduce myself. I&rsquo;m a Jets, Yankees, and Knicks fan, but above all, the proudest Buckeye in the land. I was born and raised in Westfield, NJ where I learned the importance of hard work and dedication. As an honest, responsible guy, I&rsquo;m on a mission to make my fellow Buckeyes&rsquo; lives easier and rooms cleaner. </p>
                                 <p>My freshman year at Smith Steeb was where I noticed a demand for a dorm room cleaning service at OSU. Regular class schedules paired with social gatherings can make any room a disastrous mess. There aren&rsquo;t enough hours in the day for a typical Buckeye to keep a tidy room. Between homework, exams, clubs, and nights out, a dirty room is an unnecessary evil. <br>
                                   So, please let me help you. For $30 a month ($15 per roommate), The QuadSquad will keep your room clean so you can keep your grades up. </p>
                                 <p>Below are some email addresses of important people in my life who can attest to my character and my company. Please feel free to send them a message with questions or concerns: </p>
                                 <p>Jessica Cobuzzi: <a href="mailto:jcobuzzi@fordham.edu">jcobuzzi@fordham.edu</a></p>
-                                <p>Mark Cafiero: <a href="mailto:markcafiero91@yahoo.com">markcafiero91@yahoo.com</a>    </p>
+                                <p>Mark Cafiero: <a href="mailto:markcafiero91@yahoo.com">markcafiero91@yahoo.com</a></p>
+
                             </section>
 						</div>
 					</div>
